--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -34,13 +34,17 @@ $size-2: 2.75rem !default
 $size-3: 2rem !default
 $size-4: 1.5rem !default
 $size-5: 1.25rem !default
-$size-6: 14px !default
+$size-6: 1rem !default
 $size-7: 0.75rem !default
 
 $weight-light: 300 !default
 $weight-normal: 400 !default
 $weight-semibold: 500 !default
 $weight-bold: 700 !default
+
+// Body
+$body-background: $white !default
+$body-size: 14px !default
 
 // Miscellaneous
 $easing: ease-out !default
@@ -122,7 +126,7 @@ $family-primary: $family-sans-serif !default
 $family-code: $family-monospace !default
 
 $size-small: $size-7 !default
-$size-normal: 1rem !default
+$size-normal: $size-6 !default
 $size-medium: $size-5 !default
 $size-large: $size-4 !default
 
