Use field for buttons

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -13,7 +13,7 @@
         <div class="column">
           <form action="https://bbxdesign.us3.list-manage.com/subscribe/post?u=b43b93fe633f0560b2a72a69c&amp;id=52585e8803" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-              <div class="control is-grouped">
+              <div class="field is-grouped">
                 <div class="control has-icon is-expanded">
                   <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required>
                   <span class="icon is-small">
