--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1286,12 +1286,12 @@ a.box:active {
   border-top-color: transparent;
   content: "";
   display: block;
-  height: 1rem;
+  height: 1em;
   position: relative;
-  width: 1rem;
+  width: 1em;
   left: 50%;
-  margin-left: -8px;
-  margin-top: -8px;
+  margin-left: -0.5em;
+  margin-top: -0.5em;
   position: absolute;
   top: 50%;
   position: absolute !important;
@@ -2021,9 +2021,9 @@ a.box:active {
   border-top-color: transparent;
   content: "";
   display: block;
-  height: 1rem;
+  height: 1em;
   position: relative;
-  width: 1rem;
+  width: 1em;
   position: absolute !important;
   right: 0.625em;
   top: 0.625em;
@@ -2715,9 +2715,9 @@ a.box:active {
   border-top-color: transparent;
   content: "";
   display: block;
-  height: 1rem;
+  height: 1em;
   position: relative;
-  width: 1rem;
+  width: 1em;
 }
 
 .number {
