Updating css classes + docs

--- a/docs/_includes/subnav-components.html
+++ b/docs/_includes/subnav-components.html
@@ -4,6 +4,9 @@
       <a class="nav-item is-tab {% if page.doc-subtab == 'card' %}is-active{% endif %}" href="{{ site.url }}/documentation/components/card/">
         Card
       </a>
+      <a class="nav-item is-tab {% if page.doc-subtab == 'dropdown' %}is-active{% endif %}" href="{{ site.url }}/documentation/components/dropdown/">
+        Dropdown
+      </a>
       <a class="nav-item is-tab {% if page.doc-subtab == 'level' %}is-active{% endif %}" href="{{ site.url }}/documentation/components/level/">
         Level
       </a>
