--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -21,13 +21,13 @@ $dropdown-border-color: $grey-lighter
   position: relative
 
   &.is-active
-    > .dropdown-menu
+    > .dropdown-list
       display: block
 
     > a
       outline: 0
 
-.dropdown-toggle
+.is-dropdown
   &::after
     border-left: $dropdown-caret-width solid transparent
     border-right: $dropdown-caret-width solid transparent
@@ -43,12 +43,12 @@ $dropdown-border-color: $grey-lighter
     outline: 0
 
 .dropup
-  .dropdown-toggle
+  .is-dropdown
     &::after
       border-bottom: $dropdown-caret-width solid
       border-top: 0
 
-.dropdown-menu
+.dropdown-list
   background-clip: padding-box
   background-color: $dropdown-bg
   border: $dropdown-border-width solid $dropdown-border-color
@@ -97,11 +97,11 @@ $dropdown-border-color: $grey-lighter
     color: $dropdown-link-disabled-color
     cursor: not-allowed
 
-.dropdown-menu-right
+.dropdown-list-right
   left: auto
   right: 0
 
-.dropdown-menu-left
+.dropdown-list-left
   left: 0
   right: auto
 
@@ -115,11 +115,11 @@ $dropdown-border-color: $grey-lighter
   white-space: nowrap
 
 .dropup
-  .dropdown-menu
+  .dropdown-list
     bottom: 100%
     margin-bottom: $dropdown-margin-top
     top: auto
 
 .nav-item.dropdown
-  > .dropdown-menu
+  > .dropdown-list
     margin: 0 0.75rem
