Updating docs with more examples

--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -82,6 +82,9 @@ doc-subtab: card
 
     <hr>
 
+    <h1 class="title">Dropdown size</h1>
+    <h2 class="subtitle">You can use any size you want</h2>
+
     {% capture small-dropdown %}
     <!-- Small button dropdown -->
     <div class="dropdown">
@@ -91,8 +94,8 @@ doc-subtab: card
     {% endcapture %}
 
     {% capture medium-dropdown %}
+    <!-- Medium button dropdown -->
     <div class="dropdown">
-      <!-- Medium button dropdown -->
       <button class="button is-medium is-dropdown">Medium button dropdown</button>
       {{dropdown-content}}
     </div>
@@ -105,8 +108,6 @@ doc-subtab: card
     </div>
     {% endcapture %}
 
-    <h1 class="title">Dropdown size</h1>
-    <h2 class="subtitle">You can use any size you want</h2>
     <div class="columns">
       <div class="column">
         {{small-dropdown}}
@@ -125,17 +126,17 @@ doc-subtab: card
       </div>
     </div>
 
+    <h1 class="title">Inverse dropdown (dropup)</h1>
+    <h2 class="subtitle">You can also make the list appear above the dropdown by using the <code>dropup</code> class</h2>
+
     {% capture dropup %}
+    <!-- Dropup button -->
     <div class="dropup">
-      <!-- Dropup button -->
       <button class="button is-dropdown">Dropup</button>
       {{dropdown-content}}
     </div>
     {% endcapture %}
 
-    <h1 class="title">Inverse dropdown (dropup)</h1>
-    <h2 class="subtitle">You can also make the list appear above the dropdown by using the <code>dropup</code> class</h2>
-
     <div class="columns">
       <div class="column">
         {{dropup}}
@@ -146,6 +147,9 @@ doc-subtab: card
         {% endhighlight %}
       </div>
     </div>
+
+    <h1 class="title">List alignment</h1>
+    <h2 class="subtitle">Using <code>dropdown-list-right</code> along with the <code>dropdown-list</code> will right-aligned the dropdown list</h2>
 
     {% capture dropdown-right %}
     <!-- Dropdown with a right-aligned list -->
@@ -161,9 +165,6 @@ doc-subtab: card
     </div>
     {% endcapture %}
 
-    <h1 class="title">List alignment</h1>
-    <h2 class="subtitle">Using <code>dropdown-list-right</code> along with the <code>dropdown-list</code> will right-aligned the dropdown list</h2>
-
     <div class="columns">
       <div class="column">
         {{dropdown-right}}
@@ -174,6 +175,9 @@ doc-subtab: card
         {% endhighlight %}
       </div>
     </div>
+
+    <h1 class="title">Heading title</h1>
+    <h2 class="subtitle">You can add heading title to label each of your link sections</h2>
 
     {% capture dropdown-with-heading %}
     <!-- Dropdown with two heading -->
@@ -191,9 +195,6 @@ doc-subtab: card
     </div>
     {% endcapture %}
 
-    <h1 class="title">Heading title</h1>
-    <h2 class="subtitle">You can add heading title to label each of your link sections</h2>
-
     <div class="columns">
       <div class="column">
         {{dropdown-with-heading}}
@@ -201,6 +202,56 @@ doc-subtab: card
       <div class="column">
         {% highlight html %}
         {{dropdown-with-heading}}
+        {% endhighlight %}
+      </div>
+    </div>
+
+    <h1 class="title">Divider</h1>
+    <h2 class="subtitle">Use dividers to separate groups of links</h2>
+
+    {% capture dropdown-with-divider %}
+    <!-- Dropdown with divider -->
+    <div class="dropdown">
+      <button class="button is-dropdown">Dropdown with divider</button>
+      {{dropdown-content}}
+    </div>
+    {% endcapture %}
+
+    <div class="columns">
+      <div class="column">
+        {{dropdown-with-divider}}
+      </div>
+      <div class="column">
+        {% highlight html %}
+        {{dropdown-with-divider}}
+        {% endhighlight %}
+      </div>
+    </div>
+
+    <h1 class="title">Disabled link</h1>
+    <h2 class="subtitle">You can mark link as disabled by using <code>disabled</code> along with <code>dropdown-item</code></h2>
+
+    {% capture dropdown-disabled %}
+    <!-- Dropdown with disabled link -->
+    <div class="dropdown">
+      <button class="button is-dropdown">Dropdown with disabled link</button>
+      <div class="dropdown-list">
+        <a href="#" class="dropdown-item">1st link</a>
+        <a href="#" class="dropdown-item">2nd link</a>
+        <a href="#" class="dropdown-item is-disabled">3rd link (disabled)</a>
+        <div class="divider"></div>
+        <a href="#" class="dropdown-item">Separated 4th link</a>
+      </div>
+    </div>
+    {% endcapture %}
+
+    <div class="columns">
+      <div class="column">
+        {{dropdown-disabled}}
+      </div>
+      <div class="column">
+        {% highlight html %}
+        {{dropdown-disabled}}
         {% endhighlight %}
       </div>
     </div>
