--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -86,12 +86,12 @@ $dropdown-border-color: $grey-lighter
   width: 100%
 
   &:hover,
-  &.active,
+  &.is-active,
   &:active
     background-color: darken($dropdown-bg, 2.5%)
     text-decoration: none
 
-  &.disabled,
+  &.is-disabled,
   &:disabled
     background-color: transparent
     color: $dropdown-link-disabled-color
