--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -583,10 +583,10 @@ a.box:active {
   height: 2.25em;
   justify-content: flex-start;
   line-height: 1.5;
-  padding-bottom: 0.375em;
+  padding-bottom: 0.425em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.375em;
+  padding-top: 0.325em;
   position: relative;
   vertical-align: top;
   -webkit-touch-callout: none;
@@ -1297,6 +1297,10 @@ a.box:active {
   position: absolute !important;
 }
 
+button.button {
+  line-height: 1;
+}
+
 .content {
   color: #4a4a4a;
 }
@@ -1462,10 +1466,10 @@ a.box:active {
   height: 2.25em;
   justify-content: flex-start;
   line-height: 1.5;
-  padding-bottom: 0.375em;
+  padding-bottom: 0.425em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.375em;
+  padding-top: 0.325em;
   position: relative;
   vertical-align: top;
   background-color: white;
@@ -1699,10 +1703,10 @@ a.box:active {
   height: 2.25em;
   justify-content: flex-start;
   line-height: 1.5;
-  padding-bottom: 0.375em;
+  padding-bottom: 0.425em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.375em;
+  padding-top: 0.325em;
   position: relative;
   vertical-align: top;
   background-color: white;
@@ -1839,6 +1843,11 @@ a.box:active {
   color: #ff3860;
 }
 
+input[type="submit"].input,
+.select select {
+  line-height: 1;
+}
+
 .field:not(:last-child) {
   margin-bottom: 0.75rem;
 }
@@ -1957,8 +1966,10 @@ a.box:active {
     flex-shrink: 1;
   }
   .field-body .field {
-    flex-grow: 1;
     flex-shrink: 1;
+  }
+  .field-body .field:not(.is-narrow) {
+    flex-grow: 1;
   }
   .field-body .field:not(:last-child) {
     margin-bottom: 0;
@@ -1967,6 +1978,7 @@ a.box:active {
 }
 
 .control {
+  font-size: 1rem;
   position: relative;
   text-align: left;
 }
@@ -3635,10 +3647,10 @@ a.nav-item.is-tab.is-active {
   height: 2.25em;
   justify-content: flex-start;
   line-height: 1.5;
-  padding-bottom: 0.375em;
+  padding-bottom: 0.425em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.375em;
+  padding-top: 0.325em;
   position: relative;
   vertical-align: top;
   -webkit-touch-callout: none;
