--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -55,7 +55,7 @@ doc-subtab: modal
         No JavaScript
       </div>
       <div class="message-body">
-        Bulma does <strong>not</strong> include any JavaScript interaction. You will have to implement the class toggle yourself
+        Bulma does <strong>not</strong> include any JavaScript interaction. You will have to implement the class toggle yourself.
       </div>
     </div>
 
